tests/data/watch-namespace/watched-ns2-virtual-server.yaml
apiVersion: k8s.nginx.org/v1
kind: VirtualServer
metadata:
  name: watched-vs2
spec:
  host: watched2.example.com
  upstreams:
  - name: backend2
    service: backend2-svc
    port: 80
  - name: backend1
    service: backend1-svc
    port: 80
  routes:
  - path: "/backend1"
    action:
      pass: backend1
  - path: "/backend2"
    action:
      pass: backend2
